--- a/examples/intersectionObserve/lazyload.html
+++ b/examples/intersectionObserve/lazyload.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
+	<title>Img Lazyload</title>
 	<style>
 		ul,li{list-style:none;}
 		.pos{height:800px;background:green;}
