add anotation for slider.js

--- a/examples/animate/mySlider.html
+++ b/examples/animate/mySlider.html
@@ -40,11 +40,11 @@
 	<div id="postId" style="display: none;">11111</div>
 	<div id="slider" class="swiper-container">
 		<ul class="swiper-wrapper">
-			<li class="swiper-slide"><img src="images/1.jpg" width="500" height="200"/></li>
-            <li class="swiper-slide"><img src="images/2.jpg" width="500" height="200"/></li>
-            <li class="swiper-slide"><img src="images/3.jpg" width="500" height="200"/></li>
-            <li class="swiper-slide"><img src="images/4.jpg" width="500" height="200"/></li>
-            <li class="swiper-slide"><img src="images/5.jpg" width="500" height="200"/></li>
+			<li class="swiper-slide"><img src="../img/1.jpeg" width="500" height="200"/></li>
+            <li class="swiper-slide"><img src="../img/2.jpeg" width="500" height="200"/></li>
+            <li class="swiper-slide"><img src="../img/3.jpeg" width="500" height="200"/></li>
+            <li class="swiper-slide"><img src="../img/4.jpeg" width="500" height="200"/></li>
+            <li class="swiper-slide"><img src="../img/5.jpeg" width="500" height="200"/></li>
 		</ul>
 	</div>
 
@@ -53,6 +53,6 @@
 		new Slider('#slider', {
 
 		})
-	</script>
+	</script
 </body>
 </html>
