--- a/examples/snabbom-es6/examples/index.html
+++ b/examples/snabbom-es6/examples/index.html
@@ -16,7 +16,7 @@
 
 		var container = document.getElementById('container');
 
-		var vnode = h('div#container.two.classes', {on: {click: someFn}}, [
+		var vnode = h('div#container.two.classes', {on: {click: someFn} }, [
 			h('span', {style: {fontWeight: 'bold'}}, 'This is bold'),
 			' and this is just normal text',
 			h('a', {props: {href: '/foo'}}, 'I\'ll take you places!')
@@ -25,7 +25,7 @@
 		patch(container, vnode);
 
 		setTimeout(() => {
-			var newVnode = h('div#container.two.classes', {on: {click: anotherEventHandler}}, [
+			var newVnode = h('div#container.two.classes', {on: {click: anotherEventHandler}, hook: { prepatch: testFn } }, [
 				h('span', {style: {fontWeight: 'normal', fontStyle: 'italic'}}, 'This is now italic type'),
 				' and this is still just normal text',
 				h('a', {props: {href: '/bar'}}, 'I\'ll take you places!')
@@ -42,6 +42,10 @@
 		}
 		function anotherEventHandler() {
 			console.log('=========anotherEventHandler=======')
+		}
+
+		function testFn() {
+			console.log('==========test prepatch hook============')
 		}
 	</script>
 </body>
